[gd_scene load_steps=11 format=3 uid="uid://domkqen30m13p"]

[ext_resource type="Script" path="res://Scenes/Actors/enemies/small_enemy.gd" id="1_70v83"]
[ext_resource type="Texture2D" uid="uid://cm1md1j6iu1x0" path="res://Assets/img/Actors/enemies/enemy_sheet.png" id="1_uqklc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_33p85"]
radius = 6.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_drptu"]
atlas = ExtResource("1_uqklc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_icxgf"]
atlas = ExtResource("1_uqklc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_louad"]
atlas = ExtResource("1_uqklc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pss3b"]
atlas = ExtResource("1_uqklc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ran1u"]
atlas = ExtResource("1_uqklc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3rlnw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drptu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icxgf")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_louad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pss3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ran1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pss3b")
}],
"loop": true,
"name": &"move",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8c4y1"]
radius = 5.0
height = 20.0

[node name="SmallEnemy" type="CharacterBody2D" groups=["enemy_entity"]]
collision_layer = 8
collision_mask = 59
script = ExtResource("1_70v83")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_33p85")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource("SpriteFrames_3rlnw")
animation = &"move"

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8c4y1")
debug_color = Color(0.686275, 0.498039, 0, 0.419608)

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
